crates/ship-policy/src/snapshots/ship_policy__tests__bounce_captain.snap
---
source: crates/ship-policy/src/tests.rs
expression: bounce
---
Your last message didn't address anyone. Start your message with an @mention:
- @Jordan
- @Amos
