crates/ship-policy/src/snapshots/ship_policy__tests__bounce_mate.snap
---
source: crates/ship-policy/src/tests.rs
expression: bounce
---
Your last message didn't address anyone. Start your message with an @mention:
- @Cedar
