crates/ship-policy/src/snapshots/ship_policy__tests__render_activity_summary.snap
---
source: crates/ship-policy/src/tests.rs
expression: "render_for_prompt(&delivery, &hints)"
---
<message from="summarizer">
Mate edited 3 files, ran tests twice
</message>
<routing>Reply to mate: @Jordan · Reply to human: @Amos</routing>
