crates/ship-policy/src/snapshots/ship_policy__tests__render_bounce.snap
---
source: crates/ship-policy/src/tests.rs
expression: "render_for_prompt(&delivery, &[])"
---
<routing>Message didn't address anyone. You can mention: @Jordan, @Amos</routing>
