crates/ship-policy/src/snapshots/ship_policy__tests__render_checks_failed.snap
---
source: crates/ship-policy/src/tests.rs
expression: "render_for_prompt(&delivery, &hints)"
---
<message from="system">
Checks FAILED (pre-merge): 2 hooks failed
</message>
<routing>Reply to mate: @Jordan · Reply to human: @Amos</routing>
