crates/ship-policy/src/snapshots/ship_policy__tests__render_checks_passed.snap
---
source: crates/ship-policy/src/tests.rs
expression: "render_for_prompt(&delivery, &hints)"
---
<message from="system">
Checks passed (post-commit): all green
</message>
<routing>Reply to mate: @Jordan · Reply to human: @Amos</routing>
