crates/ship-policy/src/snapshots/ship_policy__tests__render_committed_with_step.snap
---
source: crates/ship-policy/src/tests.rs
expression: "render_for_prompt(&delivery, &hints)"
---
<message from="Jordan">
Completed step: Add error handling

feat: add error handling
+42 -3
</message>
<routing>Reply to mate: @Jordan · Reply to human: @Amos</routing>
